--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="10K549" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <deployment defaultVersion="1280" identifier="iOS"/>
+        <development defaultVersion="4200" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller - Heroes-->
         <scene sceneID="14">
             <objects>
                 <navigationController id="3" sceneMemberID="viewController">
@@ -21,7 +21,6 @@
             </objects>
             <point key="canvasLocation" x="-70" y="-1510"/>
         </scene>
-        <!--Detail View Controller - Detail-->
         <scene sceneID="16">
             <objects>
                 <viewController storyboardIdentifier="" title="Detail" id="4" customClass="DetailViewController" sceneMemberID="viewController">
@@ -65,7 +64,6 @@
             </objects>
             <point key="canvasLocation" x="516" y="278"/>
         </scene>
-        <!--Split View Controller-->
         <scene sceneID="18">
             <objects>
                 <splitViewController id="5" sceneMemberID="viewController">
@@ -81,7 +79,6 @@
             </objects>
             <point key="canvasLocation" x="-687" y="-630"/>
         </scene>
-        <!--Master View Controller - Master-->
         <scene sceneID="24">
             <objects>
                 <tableViewController storyboardIdentifier="" title="Master" clearsSelectionOnViewWillAppear="NO" id="19" customClass="MasterViewController" sceneMemberID="viewController">
@@ -190,7 +187,6 @@
             </objects>
             <point key="canvasLocation" x="375" y="-1510"/>
         </scene>
-        <!--Items Table View Controller - Items-->
         <scene sceneID="NR0-Ce-uLU">
             <objects>
                 <tableViewController id="Khv-Ek-cUs" customClass="ItemsTableViewController" sceneMemberID="viewController">
@@ -263,7 +259,6 @@
             </objects>
             <point key="canvasLocation" x="-126" y="-2743"/>
         </scene>
-        <!--Navigation Controller-->
         <scene sceneID="pOm-G0-DkK">
             <objects>
                 <navigationController storyboardIdentifier="ItemNav" definesPresentationContext="YES" id="XDe-kN-O2a" sceneMemberID="viewController">
@@ -278,7 +273,6 @@
             </objects>
             <point key="canvasLocation" x="504" y="-2935"/>
         </scene>
-        <!--Items Detail View Controller-->
         <scene sceneID="rLH-bi-yJo">
             <objects>
                 <viewController id="hFQ-YJ-Fl8" customClass="ItemsDetailViewController" sceneMemberID="viewController">
@@ -290,11 +284,6 @@
                                 <rect key="frame" x="10" y="10" width="680" height="148"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view hidden="YES" contentMode="scaleToFill" id="4FA-TV-ltL">
-                                        <rect key="frame" x="170" y="37" width="1" height="1"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                    </view>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MiW-f3-7k2">
                                         <rect key="frame" x="200" y="11" width="173" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -342,21 +331,21 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Lore" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="CZa-3Y-h9L">
-                                <rect key="frame" x="20" y="211" width="670" height="21"/>
+                                <rect key="frame" x="20" y="195" width="670" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zoy-ZJ-6dO">
-                                <rect key="frame" x="20" y="182" width="670" height="21"/>
+                                <rect key="frame" x="20" y="166" width="670" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="7hI-K5-uh9">
-                                <rect key="frame" x="20" y="211" width="728" height="626"/>
+                                <rect key="frame" x="20" y="224" width="728" height="626"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -431,7 +420,6 @@
             </objects>
             <point key="canvasLocation" x="1504" y="-2904"/>
         </scene>
-        <!--Navigation Controller - Items-->
         <scene sceneID="1hf-xI-Qg8">
             <objects>
                 <navigationController storyboardIdentifier="" definesPresentationContext="YES" id="I4a-s5-ntI" sceneMemberID="viewController">
@@ -447,7 +435,6 @@
             </objects>
             <point key="canvasLocation" x="-562" y="-2743"/>
         </scene>
-        <!--Tab Bar Controller-->
         <scene sceneID="nJF-Xu-zqg">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="iGa-z1-DcB" sceneMemberID="viewController">
@@ -466,7 +453,6 @@
             </objects>
             <point key="canvasLocation" x="-544" y="-1526"/>
         </scene>
-        <!--Navigation Controller-->
         <scene sceneID="50">
             <objects>
                 <navigationController id="42" sceneMemberID="viewController">
@@ -481,7 +467,6 @@
             </objects>
             <point key="canvasLocation" x="-276" y="278"/>
         </scene>
-        <!--Guides View Controller-->
         <scene sceneID="vPr-Hd-7Nu">
             <objects>
                 <tableViewController storyboardIdentifier="GuidesVC" id="TXn-GJ-XaX" customClass="GuidesViewController" sceneMemberID="viewController">
@@ -510,7 +495,6 @@
             </objects>
             <point key="canvasLocation" x="-1259" y="1263"/>
         </scene>
-        <!--Information View Controller-->
         <scene sceneID="lIw-Jv-2kd">
             <objects>
                 <viewController storyboardIdentifier="InformationVC" id="7V3-sk-vAF" customClass="InformationViewController" sceneMemberID="viewController">
@@ -701,7 +685,6 @@
             </objects>
             <point key="canvasLocation" x="-369" y="1283"/>
         </scene>
-        <!--Abilities View Controller-->
         <scene sceneID="eXJ-NH-WOb">
             <objects>
                 <viewController storyboardIdentifier="AbilityVC" id="T6e-Ig-B8I" customClass="AbilitiesViewController" sceneMemberID="viewController">
@@ -779,7 +762,6 @@
             </objects>
             <point key="canvasLocation" x="575" y="1263"/>
         </scene>
-        <!--Ability Detail View Controller-->
         <scene sceneID="hbI-ge-RXI">
             <objects>
                 <viewController id="j3C-pY-Kim" customClass="AbilityDetailViewController" sceneMemberID="viewController">
@@ -918,7 +900,6 @@
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
-                <relationship kind="action" name="segmentChanged:" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
             </relationships>
         </class>
