--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="1938" systemVersion="10K549" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
         <scene sceneID="mzi-Xx-fVQ">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="QwK-Pb-ZTE" sceneMemberID="viewController">
@@ -23,6 +23,7 @@
             </objects>
             <point key="canvasLocation" x="-462" y="39"/>
         </scene>
+        <!--Navigation Controller - Heroes-->
         <scene sceneID="oRH-xo-vgD">
             <objects>
                 <navigationController definesPresentationContext="YES" id="ls3-Ln-bdb" sceneMemberID="viewController">
@@ -38,6 +39,7 @@
             </objects>
             <point key="canvasLocation" x="-40" y="39"/>
         </scene>
+        <!--Master View Controller - Master-->
         <scene sceneID="18">
             <objects>
                 <tableViewController storyboardIdentifier="" title="Master" id="12" customClass="MasterViewController" sceneMemberID="viewController">
@@ -62,14 +64,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" minimumFontSize="11" id="EhS-WK-OUu">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" adjustsFontSizeToFit="NO" id="EhS-WK-OUu">
                                             <rect key="frame" x="64" y="6" width="203" height="35"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" minimumFontSize="6" id="Y5z-zJ-Ezt">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsFontSizeToFit="NO" id="Y5z-zJ-Ezt">
                                             <rect key="frame" x="64" y="38" width="203" height="15"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="11"/>
@@ -130,6 +132,7 @@
             </objects>
             <point key="canvasLocation" x="426" y="56"/>
         </scene>
+        <!--Ability Detail View Controller-->
         <scene sceneID="W4W-Ga-Enp">
             <objects>
                 <viewController id="hZw-Nn-U4y" customClass="AbilityDetailViewController" sceneMemberID="viewController">
@@ -207,6 +210,7 @@
             </objects>
             <point key="canvasLocation" x="426" y="-1249"/>
         </scene>
+        <!--Abilities View Controller-->
         <scene sceneID="RKh-cU-SDJ">
             <objects>
                 <viewController storyboardIdentifier="AbilityVC" id="Jts-s9-SfV" customClass="AbilitiesViewController" sceneMemberID="viewController">
@@ -233,14 +237,14 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="MP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" minimumFontSize="9" id="gt5-sR-Skf">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="MP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontSizeToFit="NO" id="gt5-sR-Skf">
                                                     <rect key="frame" x="113" y="38" width="160" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="CD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" minimumFontSize="9" id="sg1-Pw-mUb">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="CD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontSizeToFit="NO" id="sg1-Pw-mUb">
                                                     <rect key="frame" x="113" y="65" width="160" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
@@ -300,6 +304,7 @@
             </objects>
             <point key="canvasLocation" x="-117" y="-1249"/>
         </scene>
+        <!--Items Detail View Controller - Item Detail-->
         <scene sceneID="uEH-ob-S4O">
             <objects>
                 <viewController id="PjS-wH-Wmc" customClass="ItemsDetailViewController" sceneMemberID="viewController">
@@ -449,6 +454,7 @@
             </objects>
             <point key="canvasLocation" x="-1059" y="-1257"/>
         </scene>
+        <!--Items Table View Controller - Items-->
         <scene sceneID="mrZ-bO-NmL">
             <objects>
                 <tableViewController id="71I-n7-1hQ" customClass="ItemsTableViewController" sceneMemberID="viewController">
@@ -517,6 +523,7 @@
             </objects>
             <point key="canvasLocation" x="-1045" y="-564"/>
         </scene>
+        <!--Navigation Controller - Items-->
         <scene sceneID="bCc-yc-2D5">
             <objects>
                 <navigationController definesPresentationContext="YES" id="TEK-HE-mTp" sceneMemberID="viewController">
@@ -532,6 +539,7 @@
             </objects>
             <point key="canvasLocation" x="-483" y="-564"/>
         </scene>
+        <!--View Controller-->
         <scene sceneID="bnk-54-Fyi">
             <objects>
                 <viewController id="gPp-GD-vjD" sceneMemberID="viewController">
@@ -545,6 +553,7 @@
             </objects>
             <point key="canvasLocation" x="-5" y="-584"/>
         </scene>
+        <!--Information View Controller-->
         <scene sceneID="7UB-by-1hV">
             <objects>
                 <viewController storyboardIdentifier="InformationVC" id="47e-SO-JZt" customClass="InformationViewController" sceneMemberID="viewController">
@@ -742,6 +751,7 @@
             </objects>
             <point key="canvasLocation" x="426" y="-590"/>
         </scene>
+        <!--Guides View Controller-->
         <scene sceneID="lXv-bf-yKo">
             <objects>
                 <tableViewController storyboardIdentifier="GuidesVC" id="FaU-yd-OsX" customClass="GuidesViewController" sceneMemberID="viewController">
@@ -770,6 +780,7 @@
             </objects>
             <point key="canvasLocation" x="860" y="-595"/>
         </scene>
+        <!--Detail View Controller-->
         <scene sceneID="u1w-LA-eN5">
             <objects>
                 <viewController id="g5B-bk-5l4" customClass="DetailViewController" sceneMemberID="viewController">
@@ -856,6 +867,7 @@
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="segmentChanged:" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
             </relationships>
         </class>
