--- a/Dota2App/HelloViewController.xib
+++ b/Dota2App/HelloViewController.xib
@@ -42,8 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="204855497"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="688403017"/>
+						<reference key="NSNextKeyView" ref="454189154"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">2</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -62,7 +61,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{20, 164}, {518, 88}}</string>
 								<reference key="NSSuperview" ref="688403017"/>
-								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -100,7 +99,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{20, 0}, {518, 88}}</string>
 								<reference key="NSSuperview" ref="688403017"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="667239756"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -132,7 +130,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 102}, {258, 54}}</string>
 								<reference key="NSSuperview" ref="688403017"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="530692063"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -164,7 +161,6 @@
 								<int key="NSvFlags">291</int>
 								<string key="NSFrame">{{286, 95}, {252, 68}}</string>
 								<reference key="NSSuperview" ref="688403017"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="87009119"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -187,7 +183,6 @@
 						</array>
 						<string key="NSFrame">{{109, 69}, {558, 252}}</string>
 						<reference key="NSSuperview" ref="204855497"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="648337744"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -202,7 +197,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 20}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="204855497"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="688403017"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -235,7 +230,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1024}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="226107783"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -4765,43 +4759,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 			<nil key="sourceID"/>
 			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HelloViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">close:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">close:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">close:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImage">UIImageView</string>
-						<string key="messagePanel">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImage">
-							<string key="name">backgroundImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="messagePanel">
-							<string key="name">messagePanel</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HelloViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
